--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Dev Armani",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^8.4.5"
   },
   "devDependencies": {
